// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardButton renders custom color 1`] = `
.css-0,
[data-css-0] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: center;
  cursor: pointer;
  flex: 1;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-flex: 1;
}

.css-1,
[data-css-1] {
  border: none;
  background-color: #f0f0f0;
  overflow: visible;
  color: inherit;
  font: inherit;
  line-height: normal;
  -webkit-font-smoothing: inherit;
  -moz-osx-font-smoothing: inherit;
  -webkit-appearance: none;
  transition: background 500ms ease-in-out;
  -webkit-transition: background 500ms ease-in-out;
  -moz-transition: background 500ms ease-in-out;
}

.css-1:hover,
[data-css-1]:hover,
.css-1[data-simulate-hover],
[data-css-1][data-simulate-hover] {
  cursor: pointer;
  background: #d9d9d9;
}

<button
  data-css-1=""
  data-css-0=""
  onClick={[Function]}
  type="button"
>
  Click me
</button>
`;

exports[`CardButton renders without error 1`] = `
.css-0,
[data-css-0] {
  border: none;
  background-color: #3598db;
  overflow: visible;
  color: inherit;
  font: inherit;
  line-height: normal;
  -webkit-font-smoothing: inherit;
  -moz-osx-font-smoothing: inherit;
  -webkit-appearance: none;
  transition: background 500ms ease-in-out;
  -webkit-transition: background 500ms ease-in-out;
  -moz-transition: background 500ms ease-in-out;
}

.css-0:hover,
[data-css-0]:hover,
.css-0[data-simulate-hover],
[data-css-0][data-simulate-hover] {
  cursor: pointer;
  background: #227dbf;
}

.css-4,
[data-css-4] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: center;
  cursor: pointer;
  flex: 1;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-flex: 1;
}

<button
  data-css-0=""
  data-css-4=""
  onClick={[Function]}
  type="button"
>
  Click me
</button>
`;
